# rbdl-fork

./: .gitmodules
frl/: CMakeLists.txt  package.xml
frl/include/frl/frames/: FramePoint.hpp  FrameVector.hpp  ReferenceFrame.hpp  ReferenceFrameHolder.hpp
frl/include/frl/geometry/: Point3.hpp  RigidBodyTransform.hpp
frl/include/frl/utils/: Utilities.hpp
frl/test/: FramePointTest.cpp  FrameUtilitiesTestHelper.hpp  FrameVectorTest.cpp  GeometryUtilitiesTestHelper.hpp  Point3Test.cpp  ReferenceFrameTest.cpp  ReferenceFrameTestHelper.hpp  RigidBodyTransformTest.cpp
rbdl/: CMakeLists.txt  package.xml
rbdl_benchmard/: CMakeLists.txt  package.xml
rbdl_benchmard/src/: Human36Model.cc  benchmark.cc  model_generator.cc
rbdl_dynamics/: CMakeLists.txt  package.xml
rbdl_dynamics/include/rbdl_dynamics/: Body.h  Contacts.h  Dynamics.h  Joint.h  Kinematics.h  Logging.h  Model.h  SpatialAlgebraOperators.h  rbdl.h  rbdl_math.h  rbdl_mathutils.h  rbdl_utils.h
rbdl_dynamics/include/rbdl_dynamics/frames/: FramePoint.hpp  FrameVector.hpp  ReferenceFrame.hpp  ReferenceFrameHolder.hpp
rbdl_dynamics/src/: Contacts.cc  Dynamics.cc  Joint.cc  Kinematics.cc  Logging.cc  Model.cc  ReferenceFrame.cpp  rbdl_mathutils.cc  rbdl_utils.cc  rbdl_version.cc
rbdl_dynamics/tests/: BodyTests.cc  CalcAccelerationsTests.cc  CalcVelocitiesTests.cc  CompositeRigidBodyTests.cc  ContactsTests.cc  CustomJointMultiBodyTests.cc  CustomJointSingleBodyTests.cc  CustomJointTests.cc  DynamicsTests.cc  Fixtures.h  FloatingBaseTests.cc  Human36Fixture.h  ImpulsesTests.cc  InverseDynamicsTests.cc  KinematicsTests.cc  MathTests.cc  ModelTests.cc  MultiDofTests.cc  SparseFactorizationTests.cc  SpatialAlgebraTests.cc  TwolegModelTests.cc  UnitTestUtils.hpp  UtilsTests.cc
rbdl_luamodel/: CMakeLists.txt  package.xml
rbdl_luamodel/include/rbdl_luamodel/: luamodel.h  luatables.h
rbdl_luamodel/src/: luamodel.cc  luatables.cc  rbdl_luamodel_util.cc
rbdl_python/: CMakeLists.txt  rbdl_loadmodel.cc  rbdl_ptr_functions.h
rbdl_urdfreader/: CMakeLists.txt  package.xml
rbdl_urdfreader/include/rbdl_urdfreader/: urdfreader.h
rbdl_urdfreader/src/: rbdl_urdfreader_util.cc  urdfreader.cc
