<?xml version="1.0"?>
<package format="2">
  <name>rbdl</name>
  <version>0.0.0</version>
  <description>The rbdl meta-package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jordan@todo.todo">jordan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rbdl_dynamics</exec_depend>
  <exec_depend>rbdl_benchmark</exec_depend>
  <exec_depend>rbdl_luamodel</exec_depend>
  <exec_depend>rbdl_urdfreader</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
   <export>
   <metapackage />
 </export>
</package>