<?xml version="1.0"?>
<package format="2">
  <name>rbdl_benchmark</name>
  <version>0.0.0</version>
  <description>The rbdl_benchmark package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jordan@todo.todo">jordan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rbdl_dynamics</depend>
  <depend>rbdl_luamodel</depend>
  <depend>rbdl_urdfreader</depend>
  <test_depend>gtest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>